# helper-ecr-login-auto

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-release.yml  ci.yaml  release-please.yml  release.yml
src/: cli.rs  lib.rs  main.rs  myenv.rs
tests/: integration_test.rs
