#cargo-features = ["strip"]

[package]
name = "helper-ecr-login-auto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "docker-credential-ecr-login-auto"
path = "src/main.rs"

[dependencies]
home = "0.5.3"
tini = "1.2.0"
regex = { version = "1.5.4" , default-features = false, features = ["std"]}
anyhow = "1.0.44"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1