[package]
name = "helper_ecr_login_auto"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "docker-credential-ecr-login-auto"
path = "src/main.rs"

[dependencies]
home = "0.5.5"
tini = "1.3.0"
regex = { version = "1.10.2" , default-features = false, features = ["std"]}
anyhow = "1.0.72"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1