[package]
name = "helper_ecr_login_auto"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "docker-credential-ecr-login-auto"
path = "src/main.rs"

[dependencies]
home = "0.5.11"
tini = "1.3.0"
regex = { version = "1.11.2", default-features = false, features = ["std"] }
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.46", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
testing_logger = "0.1.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 2
